--- a/Primeiro/style.css
+++ b/Primeiro/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --cor-de-fundo: #1E1E1E;
-    --verde: #ff7300;
+    --verde: #6FFF57;
     --branco: #FFFFFF;
     --botao-ativo: #3A375E;
     --botao-inativo: rgba(58, 55, 94, 0.5);
@@ -60,7 +60,7 @@ body {
     display: block;
 }
 
-.ativo {
+.botao.ativo {
 
     background-color: var(--botao-ativo);
     border-bottom: 4px solid var(--verde);
@@ -83,6 +83,7 @@ body {
     font-size: 28px;
     text-align: center;
 }
+
 .aba-conteudo-titulo-secundario{
     text-align: center;
     color: var(--verde);
