--- a/Primeiro/style.css
+++ b/Primeiro/style.css
@@ -2,8 +2,8 @@
 
 :root {
     --cor-de-fundo: #1E1E1E;
-    --verde: #6FFF57;
-    --branco: #FFFFFF;
+    --verde: #ffaf02;
+    --branco: #ffffff;
     --botao-ativo: #3A375E;
     --botao-inativo: rgba(58, 55, 94, 0.5);
     --texto-fundo: rgba(58, 55, 94, 0.3);
@@ -60,7 +60,7 @@ body {
     display: block;
 }
 
-.botao.ativo {
+.ativo {
 
     background-color: var(--botao-ativo);
     border-bottom: 4px solid var(--verde);
@@ -83,7 +83,6 @@ body {
     font-size: 28px;
     text-align: center;
 }
-
 .aba-conteudo-titulo-secundario{
     text-align: center;
     color: var(--verde);
