--- a/gago-3b-main/Primeiro/style.css
+++ b/gago-3b-main/Primeiro/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --cor-de-fundo: #1E1E1E;
-    --verde: #ffaf02;
+    --verde: #ff0202;
     --branco: #ffffff;
     --botao-ativo: #3A375E;
     --botao-inativo: rgba(58, 55, 94, 0.5);
